# haskell-tools

./: .gitignore  README.md  cabal.project  flake.nix  stack.yaml
.github/workflows/: haskell.yml
demo/: haskell-tools-demo.cabal
demo/src/Language/Haskell/Tools/: Demo.hs
ghc-patches/: 0001-Add-a-perf-counters-RTS-flag-to-enable-linux-perf-co.patch  0001-Disable-LINUX_PERF_EVENTS-and-improve-the-compile-sp.patch  0001-Patch-primop-update.patch
src/ast/: haskell-tools-ast.cabal
src/ast/Language/Haskell/Tools/: Debug.hs
src/ast/Language/Haskell/Tools/AST/: Ann.hs  Helpers.hs  Instances.hs  SemaInfoTypes.hs
src/ast/Language/Haskell/Tools/AST/Instances/: ToJSON.hs
src/ast/Language/Haskell/Tools/AST/Representation/: Names.hs  Patterns.hs
src/ast/Language/Haskell/Tools/Debug/: DebugGhcAST.hs  RangeDebug.hs  RangeDebugInstances.hs
src/backend-ghc/: haskell-tools-backend-ghc.cabal
src/backend-ghc/Language/Haskell/Tools/BackendGHC/: AddTypeInfo.hs  Binds.hs  Binds.hs-boot  Decls.hs  Exprs.hs  Exprs.hs-boot  GHCUtils.hs  Kinds.hs  Literals.hs  Modules.hs  Names.hs  Patterns.hs  Stmts.hs  TH.hs  TH.hs-boot  Types.hs  Types.hs-boot  Utils.hs
src/builtin-refactorings/: haskell-tools-builtin-refactorings.cabal
src/builtin-refactorings/Language/Haskell/Tools/: Debug.hs
src/builtin-refactorings/Language/Haskell/Tools/Debug/: DebugGhcAST.hs  RangeDebug.hs  RangeDebugInstances.hs
src/builtin-refactorings/Language/Haskell/Tools/Refactor/: Builtin.hs
src/builtin-refactorings/Language/Haskell/Tools/Refactor/Builtin/: ChangeMonad.hs  EPNG.hs  EPNG2.hs  ExtractBinding.hs  FlowCtxt.hs  GenerateTypeSignature.hs  InlineBinding.hs  LetRefactoring.hs  OrganizeImports.hs  PrintTree.hs  Ref1.hs  ReturnToLet.hs  ShowTree.hs  WriteBack.hs
src/builtin-refactorings/Language/Haskell/Tools/Refactor/Builtin/ExtensionOrganizer/Checkers/: CPPChecker.hs  FlexibleContextsChecker.hs  FlexibleInstancesChecker.hs  TypeFamiliesChecker.hs  TypeOperatorsChecker.hs
src/builtin-refactorings/Language/Haskell/Tools/Refactor/Builtin/ExtensionOrganizer/Utils/: GHCHelpers.hs
src/builtin-refactorings/test/: Main.hs
src/cli/: haskell-tools-cli.cabal
src/daemon/: haskell-tools-daemon.cabal
src/daemon/Language/Haskell/Tools/: Daemon.hs
src/daemon/Language/Haskell/Tools/Daemon/: GetModules.hs  ModuleGraph.hs  Representation.hs  Session.hs  State.hs  Update.hs  Utils.hs
src/debug/: haskell-tools-debug.cabal
src/debug/Language/Haskell/Tools/: Debug.hs
src/debug/Language/Haskell/Tools/Debug/: DebugGhcAST.hs  RangeDebugInstances.hs
src/experimental-refactorings/: haskell-tools-experimental-refactorings.cabal
src/experimental-refactorings/test/: Main.hs
src/parser/: haskell-tools-parser.cabal  newAST  newASTT
src/parser/Language/Haskell/Tools/Parser/: ApiGatewayrefact.hs  FlowChange.hs  GetFunctionBranching.hs  Interface.hs  LensRefact.hs  LetRefactoring.hs  ParseModule.hs  ProgramOptions.hs  RemoveExceptionsInGatewaySyncFn.hs  RemoveUnusedFuns.hs  RemoveWildCards.hs  SplitModule.hs  SplitTypesInModule.hs  TraverseFunctionDef.hs
src/parser/exe/: Main.hs
src/prettyprint/: haskell-tools-prettyprint.cabal
src/prettyprint/Language/Haskell/Tools/: PrettyPrint.hs
src/prettyprint/Language/Haskell/Tools/PrettyPrint/Prepare/: PlaceComments.hs  RangeTemplate.hs  RangeToRangeTemplate.hs  SourceTemplate.hs
src/refactor/: haskell-tools-refactor.cabal
src/refactor/Language/Haskell/Tools/Refactor/: ChopperFile.hs  Prepare.hs  RefactChopper.hs
src/refactor/Language/Haskell/Tools/Refactor/Utils/: BindingElem.hs  Debug.hs  Extensions.hs  Helpers.hs  Type.hs  TypeLookup.hs
src/refactor/test/: Main.hs
src/rewrite/: haskell-tools-rewrite.cabal
src/rewrite/Language/Haskell/Tools/Rewrite/: ElementTypes.hs
src/rewrite/Language/Haskell/Tools/Rewrite/Create/: Binds.hs  Decls.hs  Exprs.hs  Modules.hs  Names.hs  Patterns.hs  Stmts.hs  Types.hs  Utils.hs
src/rewrite/Language/Haskell/Tools/Rewrite/Match/: Binds.hs  Exprs.hs  Modules.hs
