name:                haskell-tools-parser
version:             1.1.1.0
synopsis:            Refactoring Tool for Haskell
description:         Contains a set of refactorings based on the Haskell-Tools framework to easily transform a Haskell program. For the descriptions of the implemented refactorings, see the homepage.
homepage:            https://github.com/haskell-tools/haskell-tools
license:             
author:              Chaitanya Nair
maintainer:          chaitanyanair920@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options: -O2
  exposed-modules:     Language.Haskell.Tools.Parser.ParseModule
                     , Language.Haskell.Tools.Parser.SplitModule
                     , Language.Haskell.Tools.Parser.ProgramOptions
                     , Language.Haskell.Tools.Parser.LetRefactoring
                     , Language.Haskell.Tools.Parser.RemoveWildCards
                     , Language.Haskell.Tools.Parser.SplitTypesInModule

  build-depends:       base                       
                     , aeson                     
                     , mtl                       
                     , uniplate                  
                     , ghc-paths                 
                     , containers                
                     , directory                 
                     , transformers              
                     , references                       
                     , split                     
                     , filepath                  
                     , template-haskell           
                     , ghc                        
                     , Cabal                      
                     , haskell-tools-ast        
                     , haskell-tools-backend-ghc
                     , haskell-tools-rewrite    
                     , haskell-tools-prettyprint
                     , haskell-tools-refactor
                     , haskell-tools-builtin-refactorings
                     , strict
                     , pretty
                     , Diff
                     , extra
                     , unordered-containers
                     , shelly
                     , ghc-boot
                     , optparse-applicative
  default-language:    Haskell2010

executable ht-parse
  ghc-options:         -rtsopts
  build-depends:       base                       
                     , split                    
                     , mtl                     
                     , directory              
                     , filepath                
                     , optparse-applicative      
                     , haskell-tools-parser
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
