name:                haskell-tools-refactor
version:             1.1.1.0
synopsis:            Refactoring Tool for Haskell
description:         Contains a set of refactorings based on the Haskell-Tools framework to easily transform a Haskell program. For the descriptions of the implemented refactorings, see the homepage.
homepage:            https://github.com/haskell-tools/haskell-tools
license:             BSD3
license-file:        LICENSE
author:              Boldizsar Nemeth
maintainer:          nboldi@elte.hu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

extra-source-files: examples/CppHs/Language/Preprocessor/*.hs
                  , examples/CppHs/Language/Preprocessor/Cpphs/*.hs
                  , examples/CppHs/Language/Preprocessor/Cpphs/*.hs
                  , examples/Decl/*.hs
                  , examples/Expr/*.hs
                  , examples/InstanceControl/Control/Instances/*.hs
                  , examples/Module/*.hs
                  , examples/Pattern/*.hs
                  , examples/TH/*.hs
                  , examples/CPP/*.hs
                  , examples/TH/QuasiQuote/*.hs
                  , examples/TH/Splice/*.hs
                  , examples/Type/*.hs
                  , examples/CommentHandling/*.hs

library
  ghc-options: -O2
  exposed-modules:     Language.Haskell.Tools.Refactor
                     , Language.Haskell.Tools.Refactor.Monad
                     , Language.Haskell.Tools.Refactor.Prepare
                     , Language.Haskell.Tools.Refactor.Refactoring
                     , Language.Haskell.Tools.Refactor.Representation
                     , Language.Haskell.Tools.Refactor.Utils.AST
                     , Language.Haskell.Tools.Refactor.Utils.BindingElem
                     , Language.Haskell.Tools.Refactor.Utils.Debug
                     , Language.Haskell.Tools.Refactor.Utils.Extensions
                     , Language.Haskell.Tools.Refactor.Utils.Helpers
                     , Language.Haskell.Tools.Refactor.Utils.Indentation
                     , Language.Haskell.Tools.Refactor.Utils.Lists
                     , Language.Haskell.Tools.Refactor.Utils.Maybe
                     , Language.Haskell.Tools.Refactor.Utils.Monadic
                     , Language.Haskell.Tools.Refactor.Utils.Name
                     , Language.Haskell.Tools.Refactor.Utils.Type
                     , Language.Haskell.Tools.Refactor.Utils.NameLookup
                     , Language.Haskell.Tools.Refactor.Utils.TypeLookup
                     , Language.Haskell.Tools.Refactor.Querying

  build-depends:       base                       
                     , aeson                    
                     , mtl                       >= 2.2  && < 2.3
                     , uniplate                  >= 1.6  && < 1.7
                     , ghc-paths                 >= 0.1  && < 0.2
                     , containers                >= 0.5  && < 0.7
                     , directory                 >= 1.2  && < 1.4
                     , transformers              >= 0.5  && < 0.6
                     , references                 
                     , split                     >= 0.2  && < 0.3
                     , filepath                  >= 1.4  && < 1.5
                     , template-haskell           
                     , ghc                        
                     , Cabal                      
                     , haskell-tools-ast         >= 1.1  && < 1.2
                     , haskell-tools-backend-ghc
                     , haskell-tools-rewrite     >= 1.1  && < 1.2
                     , haskell-tools-prettyprint >= 1.1  && < 1.2
                     , strict
                     , pretty
                     , Diff
                     , extra
                     , unordered-containers
                     , shelly
                     , ghc-boot
  default-language:    Haskell2010